--- a/_sass/_methodology.sass
+++ b/_sass/_methodology.sass
@@ -97,6 +97,11 @@ html.page-methodology
                     min-height: 9rem
                     padding-left: 3rem
 
+                &.List-item--no-indent
+                    margin-left: 0
+                    border-left: none
+                    padding-left: 0
+
             &.Ordered-list--no-number:before
                 display: none
 
