--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@ custom_body_class: methodology
 <title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
 <link href='/assets/favicon.png' rel='icon' type='image/png'>
 <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
-<link href="http://localhost:5000/assets/application.css" media="all" rel="stylesheet" type="text/css" />
-<script src="http://localhost:5000/assets/application.js"></script>
+<link href="https://www.adaptivelab.com/assets/application-f281db054c43f9147b6c24b96c61a5a3.css" media="all" rel="stylesheet" type="text/css" />
+<script src="https://www.adaptivelab.com/assets/application-0f6f7d924190028f2ebd6b215a95e012.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <link href="/assets/stylesheets/pygments.css" media="all" rel="stylesheet" type="text/css" />
 <link href="/assets/stylesheets/entypo.css" media="all" rel="stylesheet" type="text/css" />
