Only open top level items with Javascript

--- a/_sass/_accordion.sass
+++ b/_sass/_accordion.sass
@@ -85,7 +85,7 @@ dd
     &.Accordion__toggle--open
         border-bottom: 1px solid transparent
 
-    &.Accordion__toggle--closed
+    &.Accordion__toggle--closed, &.Accordion__element--no-arrow
         border-bottom: 1px solid $list-separator-grey
 
     &:last-of-type &.Accordion__toggle--closed
