--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,9 @@
 <meta content='width=device-width, initial-scale=1.0' name='viewport'>
 
 <title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
-<link href='https://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
-<link href="https://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
-<script src="https://www.adaptivelab.com/assets/application-0f6f7d924190028f2ebd6b215a95e012.js" type="text/javascript"></script>
+<link href='https://www.adaptivelab.com/favicon.png' rel='icon' type='image/png'>
+<link href="/assets/application-87cf2c5275f004c6f7d06255ca02d9a0.css" media="all" rel="stylesheet" type="text/css" />
+<script src="/assets/application-0f6f7d924190028f2ebd6b215a95e012.js" type="text/javascript"></script>
 <!--[if IE]>
 <link href="https://www.adaptivelab.com/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
 <![endif]-->
