Redirecting to the new site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,13 @@
 <title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
 <link href='https://www.adaptivelab.com/favicon.png' rel='icon' type='image/png'>
 <link href="/assets/application-87cf2c5275f004c6f7d06255ca02d9a0.css" media="all" rel="stylesheet" type="text/css" />
+
+<!-- redirect to the new site location -->
+<link rel="canonical" href="http://tech.adaptivelab.com" />
+<script type="text/javascript">
+  window.location.href = 'http://tech.adaptivelab.com';
+</script>
+
 <script src="/assets/application-0f6f7d924190028f2ebd6b215a95e012.js" type="text/javascript"></script>
 <!--[if IE]>
 <link href="https://www.adaptivelab.com/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
